--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,11 +2,22 @@ $f: "Lato", sans-serif;
 $fsize: 70px;
 $fsize2: 30px;
 $fsizeh2: 40px;
-$color: blue;
+$color1: #054a91;
+$color2: #3E7CB1;
+$color3:#81A4CD;
+$color4:#DBE4EE;
+$color5:#F17300;
+$color6:#2B2C28;
+$color7:#4F517D;
+$color8:#DADDD8;
+$color9:#698996;
+$color10:#A17C6B;
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
 }
 /*nav{
  position: fixed;
@@ -66,8 +77,8 @@ nav {
       width: 35%;
       padding: 3.5% 2%;
       font-size: 20px;
-      background-color: $color;
-      border-radius: 3px;
+      background-color: $color5;
+      border-radius: 15px;
     }
   }
   }
@@ -86,17 +97,51 @@ p{
     font-size: larger;   
     margin: 0.8%;
 }
+button {
+    display: flex;
+    justify-content: center;
+    margin: 1% auto 1% auto;
+    height: 80px;
+    width: 100px;
+    padding: 0.5% 1%;
+    font-size: 15px;
+    background-color: $color5;
+    border-radius: 15px;
+  }
 }
   }
   .second{
-    background-color: blueviolet;
+    background-color: $color2;
+    font-size: 100%;
+    .container2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h3{
+            font-size: 1.5em;
+        }
+       
+    }
+    .forcards{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+div{
+    margin: 10%;
+    text-align: center;
+   h4{
+    font-size: 40px;
+   }
+}
+    }
   }
   .third{
-    background-color: lightblue;
+    background-color: $color3;
   }
   .forth{
-    background-color: chocolate;
+    background-color: $color7;
   }
   .copyright{
-    background-color: cadetblue;
+    background-color: $color4;
   }
