--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 /*nav{
@@ -63,8 +64,8 @@ header .container button {
   width: 35%;
   padding: 3.5% 2%;
   font-size: 20px;
-  background-color: blue;
-  border-radius: 3px;
+  background-color: #F17300;
+  border-radius: 15px;
 }
 
 .first {
@@ -84,19 +85,52 @@ header .container button {
   font-size: larger;
   margin: 0.8%;
 }
+.first .container1 button {
+  display: flex;
+  justify-content: center;
+  margin: 1% auto 1% auto;
+  height: 80px;
+  width: 100px;
+  padding: 0.5% 1%;
+  font-size: 15px;
+  background-color: #F17300;
+  border-radius: 15px;
+}
 
 .second {
-  background-color: blueviolet;
+  background-color: #3E7CB1;
+  font-size: 100%;
+}
+.second .container2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.second .container2 h3 {
+  font-size: 1.5em;
+}
+.second .forcards {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+.second .forcards div {
+  margin: 10%;
+  text-align: center;
+}
+.second .forcards div h4 {
+  font-size: 40px;
 }
 
 .third {
-  background-color: lightblue;
+  background-color: #81A4CD;
 }
 
 .forth {
-  background-color: chocolate;
+  background-color: #4F517D;
 }
 
 .copyright {
-  background-color: cadetblue;
+  background-color: #DBE4EE;
 }/*# sourceMappingURL=styles.css.map */
